Refactor modularização